# rustquet

./: .gitignore  AGENTS.md  Cargo.toml  README.MD  config.json  config_v2.json  config_v2_overwrite.json  config_v3_nested.json  example.env
.github/workflows/: ci.yml  release.yml
benches/: end_to_end_bench.rs  ingest_bench.rs  macrobench.rs
benches/common/: mod.rs
src/: actors.rs  config.rs  lib.rs  main.rs  models.rs  parquet.rs  routes.rs  storage.rs
src/app/: actors.rs  config.rs  health.rs  mod.rs  routes.rs
src/domain/: mod.rs  models.rs  schema.rs  schema_tests.rs
src/domain/schema/: mod.rs  schema.rs  spec.rs
src/infra/: layout.rs  manifest.rs  mod.rs  parquet.rs  storage.rs  uploader.rs
