[package]
name = "rustquet"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rocksdb = "0.24.0"
arrow = "58.1.0"
parquet = "58.1.0"
uuid = { version = "1.23.0", features = ["v4", "v7", "fast-rng"] }
dotenvy = "0.15.7"