[package]
name = "rustquet"
version = "0.1.2"
edition = "2024"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rocksdb = "0.24.0"
arrow = "58.1.0"
parquet = "58.1.0"
uuid = { version = "1.23.0", features = ["v4", "v7", "fast-rng"] }
dotenvy = "0.15.7"
object_store = { version = "0.13.2", features = ["aws"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }

[[bench]]
name = "ingest_bench"
harness = false

[[bench]]
name = "end_to_end_bench"
harness = false
